# crates/pba_service/src/api/openapi.json
@@ -450,6 +450,26 @@
                         "schema": {
                             "type": "number"
                         }
+                    },
+                    {
+                        "name": "from_date",
+                        "in": "query",
+                        "description": "ISO 8601 date-time.",
+                        "schema": {
+                            "type": "string",
+                            "description": "ISO 8601 date-time.",
+                            "format": "date-time"
+                        }
+                    },
+                    {
+                        "name": "to_date",
+                        "in": "query",
+                        "description": "ISO 8601 date-time.",
+                        "schema": {
+                            "type": "string",
+                            "description": "ISO 8601 date-time.",
+                            "format": "date-time"
+                        }
                     }
                 ],
                 "responses": {
